# yafowil.documentation

./: .gitignore  CLAUDE.md  LICENSE.rst  Makefile  base.cfg  bootstrap.sh  buildout.cfg  dev.cfg  mx.ini  pyproject.toml  requirements-mxdev.txt  setup.py
docs/: .buildinfo  CNAME  architecture.html  blueprints.html  concepts.html  extend.html  genindex.html  helloworld.html  index.html  integrations.html  introduction.html  objects.inv  plans.html  quickstart.html  resources.html  search.html  searchindex.js  usage.html  yaml.html
docs-source/: architecture.rst  architecture.txt  blueprints.rst  conf.py  extend.rst  helloworld.rst  helloworld.txt  index.rst  index.txt  integrations.rst  introduction.rst  introduction.txt  plans.rst  quickstart.rst  widgets.rst  yaml.rst  yaml.txt
docs-source/_static/: style.css  styles.css
docs-source/_templates/: layout.html
docs-source/_themes/bootstrap_with_navtree/: globalnav.html  layout.html
docs-source/_themes/bootstrap_with_navtree/static/: bootstrap-sphinx.css_t
docs/.doctrees/: architecture.doctree  blueprints.doctree  concepts.doctree  environment.pickle  extend.doctree  helloworld.doctree  index.doctree  integrations.doctree  introduction.doctree  plans.doctree  quickstart.doctree  resources.doctree  usage.doctree  yaml.doctree
docs/_sources/: architecture.rst.txt  concepts.rst.txt  extend.rst.txt  index.rst.txt  integrations.rst.txt  introduction.rst.txt  resources.rst.txt  usage.rst.txt
docs/_static/: conestack-vars.css  conestack.css  conestack.css.map  pygments_dark.css
docs/_static/css/: conestack.css  conestack.min.css
docs/_static/js/: colortoggle.js  conestack.js
docs/html/: architecture.html  blueprints.html  extend.html  introduction.html  search.html  searchindex.js
docs/html/_sources/: helloworld.rst.txt  index.rst.txt
src/yafowil/documentation/: __init__.py  sphinxext.py
