[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.documentation"
version = "4.0.0.dev0"
description = "Documentation of YAFOWIL - Yet Another Form Widget Library"
license = {text = "Simplified BSD and CC-BY-SA"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "input", "widgets", "form", "compound"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "collective.sphinx.includedoc",
    "pillow",
    "sphinx",
    "sphinx_conestack_theme",
    "yafowil",
    "yafowil.widget.ace",
    "yafowil.widget.array",
    "yafowil.widget.autocomplete",
    "yafowil.widget.chosen",
    "yafowil.widget.cron",
    "yafowil.widget.datetime",
    "yafowil.widget.dict",
    "yafowil.widget.image",
    "yafowil.widget.location",
    "yafowil.widget.multiselect",
    "yafowil.widget.richtext",
    "yafowil.widget.select2",
    "yafowil.widget.slider",
    "yafowil.widget.wysihtml5",
    "yafowil.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]
[tool.zest-releaser]
create-wheel = true
