[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "yafowil.documentation"
version = "4.0.0.dev0"
description = "Documentation of YAFOWIL - Yet Another Form Widget Library"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "Simplified BSD and CC-BY-SA"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "input", "widgets", "form", "compound"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "collective.sphinx.includedoc",
    "pillow>=10.0.0",
    "sphinx",
    "sphinx_conestack_theme",
    "yafowil>3.99",
    "yafowil.widget.ace>1.99",
    "yafowil.widget.array>1.99",
    "yafowil.widget.autocomplete>1.99",
    "yafowil.widget.chosen>1.99",
    "yafowil.widget.cron>1.99",
    "yafowil.widget.datetime>1.99",
    "yafowil.widget.dict>1.99",
    "yafowil.widget.image>1.99",
    "yafowil.widget.location>1.99",
    "yafowil.widget.multiselect>1.99",
    "yafowil.widget.richtext>1.99",
    "yafowil.widget.select2>1.99",
    "yafowil.widget.slider>1.99",
    "yafowil.widget.wysihtml5>1.99",
    "yafowil.yaml>2.99",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    {path = "LICENSE.rst"},
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github/",
    "/artwork/",
    "/docs-source/",
    "/docs",
    "/Makefile",
    "/mx.ini",
    "base.cfg",
    "dev.cfg",
    "requirements-mxdev.txt",
    "requirements.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
